// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationPage should render LocationPage after click on the button Change 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 change-location css-2ulfj5-MuiTypography-root"
    >
      Change location
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeLarge MuiButton-containedSizeLarge change-button css-mkazzp-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Change
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </h6>
  </div>
</DocumentFragment>
`;

exports[`LocationPage should render LocationPage without opened modal window 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 change-location css-2ulfj5-MuiTypography-root"
    >
      Change location
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeLarge MuiButton-containedSizeLarge change-button css-mkazzp-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Change
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </h6>
  </div>
</DocumentFragment>
`;

exports[`LocationPage should render modal with inputs and active button after typing correct text 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 change-location css-2ulfj5-MuiTypography-root"
    >
      Change location
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeLarge MuiButton-containedSizeLarge change-button css-mkazzp-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Change
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        >
          <span
            class="css-y4cjyz-MuiTouchRipple-ripple MuiTouchRipple-ripple MuiTouchRipple-rippleVisible"
            style="width: 2.8284271247461903px; height: 2.8284271247461903px; top: -1.4142135623730951px; left: -1.4142135623730951px;"
          >
            <span
              class="MuiTouchRipple-child MuiTouchRipple-childLeaving"
            />
          </span>
        </span>
      </button>
    </h6>
  </div>
</DocumentFragment>
`;

exports[`LocationPage should render modal with inputs and active button after typing correct text and show weather forecast 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 change-location css-2ulfj5-MuiTypography-root"
    >
      Change location
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeLarge MuiButton-containedSizeLarge change-button css-mkazzp-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Change
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        >
          <span
            class="css-y4cjyz-MuiTouchRipple-ripple MuiTouchRipple-ripple MuiTouchRipple-rippleVisible"
            style="width: 2.8284271247461903px; height: 2.8284271247461903px; top: -1.4142135623730951px; left: -1.4142135623730951px;"
          >
            <span
              class="MuiTouchRipple-child MuiTouchRipple-childLeaving"
            />
          </span>
        </span>
      </button>
    </h6>
  </div>
</DocumentFragment>
`;

exports[`LocationPage should render modal with inputs and disabled button after typing incorrect text 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 change-location css-2ulfj5-MuiTypography-root"
    >
      Change location
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeLarge MuiButton-containedSizeLarge change-button css-mkazzp-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Change
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        >
          <span
            class="css-y4cjyz-MuiTouchRipple-ripple MuiTouchRipple-ripple MuiTouchRipple-rippleVisible"
            style="width: 2.8284271247461903px; height: 2.8284271247461903px; top: -1.4142135623730951px; left: -1.4142135623730951px;"
          >
            <span
              class="MuiTouchRipple-child MuiTouchRipple-childLeaving"
            />
          </span>
        </span>
      </button>
    </h6>
  </div>
</DocumentFragment>
`;
